Reimplement search query functionality on GET /entry
